Header & Welcome 완료

--- a/index.html
+++ b/index.html
@@ -10,8 +10,25 @@
 </head>
 <body>
   <div class="container">
-    <header></header>
-    <section class="welcome"></section>
+    <header>
+      <div class="logo">
+        <img src="images/Netflix_Logo_PMS.png">
+      </div>
+      <div class="signin">
+        <button>sign in</button>
+      </div>
+    </header>
+    <section class="welcome">
+      <div class="heading">
+        <h1>Unlimited movies, TV shows, and more</h1>
+        <h5>Watch anywhere. Cancel anytime.</h5>
+        <p>Ready to watch? Enter your email to create or restart your membership.</p>
+        <div class="getstarted">
+          <input type="email"> <span>Email Address</span>
+          <button>Get Started <i class="xi-angle-right-min"></i></button>
+        </div>
+      </div>
+    </section>
     <section class="enjoy"></section>
     <section class="download"></section>
     <section class="watch"></section>
