--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
   <link rel="shortcut icon" href="images/nficon2016.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <div class="container">
     <header>
@@ -29,12 +31,114 @@
         </div>
       </div>
     </section>
-    <section class="enjoy"></section>
-    <section class="download"></section>
-    <section class="watch"></section>
-    <section class="create"></section>
-    <section class="faq"></section>
+    <section class="enjoy">
+      <div class="inner">
+        <div class="desc">
+          <h2>Enjoy on your TV</h2>
+          <p>Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.</p>
+        </div>
+        <div class="preview">
+          <img src="images/tv.png">
+        </div>
+      </div>
+    </section>
+    <section class="watch">
+      <div class="inner">
+        <div class="preview">
+          <img src="images/device-pile.png">
+        </div>
+        <div class="desc">
+          <h2>Watch everywhere</h2>
+          <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
+        </div>
+      </div>
+    </section>
+    <section class="create">
+      <div class="inner">
+        <div class="desc">
+          <h2>Create profiles for kids</h2>
+          <p>Send kids on adventures with their favorite characters in a space made just for them—free with your
+            membership.</p>
+        </div>
+        <div class="preview">
+          <img
+            src="images/AAAABdl4VeWgVycbbzJBV1KbIpMScxU_I4h6uTvNRpFab-65jsTTqI0V-g-4Jq4CLaIVqx-wbKAwA_Ee8KhZyTb0SFJ5tK2mifI-GYEB.png">
+        </div>
+      </div>
+    </section>
+    <section class="download">
+      <div class="inner">
+        <div class="preview">
+          <img src="images/mobile-0819.jpg">
+        </div>
+        <div class="desc">
+          <h2>Download your shows to watch offline</h2>
+          <p>Only available on ad-free plans.</p>
+        </div>
+      </div>
+    </section>
+    <section class="faq">
+      <div class="faq-inner">
+        <h1>Frequently Asked Questions</h1>
+        <article class="accordion">
+          <input type="radio" name="faq-item" id="faq1">
+          <label for="faq1">What can I watch on Netflix?<span><i class="xi-plus"></i></span></label>
+          <div class="faq-content">
+            Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix
+            originals, and more. Watch as much as you want, anytime you want.
+            <br><br>
+            <a>Check out some of our content.</a>
+          </div>
+          <input type="radio" name="faq-item" id="faq2">
+          <label for="faq2">What is Netflix?<span><i class="xi-plus"></i></span></label>
+          <div class="faq-content">
+            Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime,
+            documentaries, and more on thousands of internet-connected devices.
+            <br><br>
+            You can watch as much as you want, whenever you want – all for one low monthly price. There's always
+            something new to discover and new TV shows and movies are added every week!
+          </div>
+          <input type="radio" name="faq-item" id="faq3">
+          <label for="faq3">How much does Netflix cost?<span><i class="xi-plus"></i></span></label>
+          <div class="faq-content">
+            Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all
+            for one fixed monthly fee. Plans range from KRW5,500 to KRW17,000 a month. No extra costs, no contracts.
+          </div>
+          <input type="radio" name="faq-item" id="faq4">
+          <label for="faq4">Where can I watch?<span><i class="xi-plus"></i></span></label>
+          <div class="faq-content">
+            Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the
+            web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix
+            app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
+            <br><br>
+            You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.
+          </div>
+          <input type="radio" name="faq-item" id="faq5">
+          <label for="faq5">How do I cancel?<span><i class="xi-plus"></i></span></label>
+          <div class="faq-content">
+            Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.
+          </div>
+          <input type="radio" name="faq-item" id="faq6">
+          <label for="faq6">Is Netflix good for kids?<span><i class="xi-plus"></i></span></label>
+          <div class="faq-content">
+            The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and movies in their own space.
+            <br><br>
+            Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.
+          </div>
+        </article>
+        <aside>
+          <p>
+            Ready to watch? Enter your email to create or restart your membership.
+          </p>
+          <div class="getstarted">
+            <input type="email"> <span>Email Address</span>
+            <button>Get Started <i class="xi-angle-right-min"></i></button>
+          </div>
+        </aside>
+      </div>
+    </section>
     <footer></footer>
   </div>
 </body>
+
 </html>
