--- a/index.html
+++ b/index.html
@@ -111,19 +111,23 @@
             web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix
             app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
             <br><br>
-            You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.
+            You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch
+            while you're on the go and without an internet connection. Take Netflix with you anywhere.
           </div>
           <input type="radio" name="faq-item" id="faq5">
           <label for="faq5">How do I cancel?<span><i class="xi-plus"></i></span></label>
           <div class="faq-content">
-            Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.
+            Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel your account
+            online in two clicks. There are no cancellation fees – start or stop your account anytime.
           </div>
           <input type="radio" name="faq-item" id="faq6">
           <label for="faq6">Is Netflix good for kids?<span><i class="xi-plus"></i></span></label>
           <div class="faq-content">
-            The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and movies in their own space.
+            The Netflix Kids experience is included in your membership to give parents control while kids enjoy
+            family-friendly TV shows and movies in their own space.
             <br><br>
-            Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific titles you don’t want kids to see.
+            Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content
+            kids can watch and block specific titles you don’t want kids to see.
           </div>
         </article>
         <aside>
@@ -137,7 +141,54 @@
         </aside>
       </div>
     </section>
-    <footer></footer>
+    <footer>
+      <div class="footer-inner">
+        <div class="sitemap">
+          <h6>Questions? Call 080-001-9588</h6>
+          <div class="links">
+            <div class="items">
+              <a href="#none">FAQ</a>
+              <a href="#none">Media Center</a>
+              <a href="#none">Ways to Watch</a>
+              <a href="#none">Cookie Preferences</a>
+              <a href="#none">Speed Test</a>
+            </div>
+            <div class="items">
+              <a href="#none">
+                Help Center</a>
+              <a href="#none">Investor Relations</a>
+              <a href="#none">
+                Terms of Use</a>
+              <a href="#none">Corporate Information</a>
+              <a href="#none">
+                Legal Notices</a>
+            </div>
+            <div class="items">
+              <a href="#none">
+                Account</a>
+              <a href="#none">
+                Jobs</a>
+              <a href="#none">Privacy Statement</a>
+              <a href="#none">Contact Us</a>
+              <a href="#none">Only on Netflix</a>
+            </div>
+          </div>
+        </div>
+        <div class="copyright">
+          <p>
+            Netflix South Korea<br><br>
+            Netflix Services Korea Ltd. E-Commerce Registration Number: Je 2018-Seoul Jong-ro-0426 Ho. Phone:
+            080-001-9588<br>
+            Representative: Reginald Shawn Thompson<br>
+            Email: korea@netflix.com<br>
+            Address: 20F, Tower A, Centropolis Building 26, Ujeongguk-ro, Jongno-gu, Seoul, 03161 Republic of Korea<br>
+            Business registration number: 165-87-00119<br>
+            Hosted by: Amazon Web Services Inc.<br>
+            KFTC website
+          </p>
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 
